# dextbird-sample-bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: main.py
src/cogs/: tts.py
